[gd_scene load_steps=4 format=3 uid="uid://dkk1frspxjyfg"]

[ext_resource type="Script" uid="uid://vom64iaff8y4" path="res://scenes/GUI/bingo_main/draw_box/gui_all_deck_display.gd" id="1_bi3o8"]
[ext_resource type="PackedScene" uid="uid://douspbaf6ah1q" path="res://scenes/GUI/bingo_main/draw_box/gui_pile_display.tscn" id="3_ninpk"]
[ext_resource type="PackedScene" uid="uid://beuy7po6dtwkn" path="res://scenes/GUI/utils/gui_overlay_background.tscn" id="4_m0151"]

[node name="GUIAllDeckDisplay" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bi3o8")

[node name="GUIOverlayBackground" parent="." instance=ExtResource("4_m0151")]
unique_name_in_owner = true
layout_mode = 1

[node name="GUIDrawPileDisplay" parent="." instance=ExtResource("3_ninpk")]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 120)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -4.0
offset_right = 12.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
